adjusted the code to do the correct thing, also finished up the visualization of the computed pointclouds

--- a/sceneGraph_update/visualization_pointclouds.ipynb
+++ b/sceneGraph_update/visualization_pointclouds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -59,18 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cur scan id colors {3: array([255, 187, 120], dtype=uint8), 10: array([148, 103, 189], dtype=uint8), 17: array([158, 218, 229], dtype=uint8), 6: array([ 44, 160,  44], dtype=uint8), 4: array([255, 127,  14], dtype=uint8), 16: array([188, 189,  34], dtype=uint8), 2: array([ 31, 119, 180], dtype=uint8), 7: array([255, 152, 150], dtype=uint8), 15: array([219, 219, 141], dtype=uint8), 14: array([227, 119, 194], dtype=uint8), 1: array([174, 199, 232], dtype=uint8), 11: array([196, 156, 148], dtype=uint8), 0: array([0, 0, 0], dtype=uint8), 22: array([202, 185,  52], dtype=uint8), 8: array([214,  39,  40], dtype=uint8), 9: array([197, 176, 213], dtype=uint8), 30: array([140, 153, 101], dtype=uint8), 28: array([ 91, 163, 138], dtype=uint8), 12: array([140,  86,  75], dtype=uint8), 26: array([ 78,  71, 183], dtype=uint8), 24: array([200,  54, 131], dtype=uint8), 25: array([ 92, 193,  61], dtype=uint8), 5: array([152, 223, 138], dtype=uint8), 29: array([153,  98, 156], dtype=uint8), 21: array([140,  57, 197], dtype=uint8), 20: array([ 66, 188, 102], dtype=uint8), 13: array([247, 182, 210], dtype=uint8), 23: array([ 51, 176, 203], dtype=uint8), 27: array([172, 114,  82], dtype=uint8)}\n",
-      "new scan id colors dict_keys([13, 20, 1, 4, 100, 6, 14, 15, 18, 29, 5, 8, 16, 105, 0])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#for a given scene get the colours of the differnt object_ids\n",
     "def get_id_colours(data_dir,scan_id):\n",
@@ -111,28 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: {'center': array([[-0.4760977 ,  1.35325495,  0.0927426 ]]),\n",
-       "  'points': array([[-0.43350216,  1.47394601,  0.37751036],\n",
-       "         [-0.40853397,  1.17425119, -0.00435107],\n",
-       "         [-0.37732428,  1.48571919,  0.3812295 ],\n",
-       "         ...,\n",
-       "         [-0.58517792,  1.14374966,  0.21411133],\n",
-       "         [-1.35839904,  2.17283871, -0.37604445],\n",
-       "         [-0.5894311 ,  2.18545082, -0.36533461]]),\n",
-       "  'votes': 16}}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def acces_predicted_objects(scan_id):\n",
     "    all_centers = {}\n",
@@ -152,7 +124,7 @@
     "            }\n",
     "    return all_centers\n",
     "\n",
-    "acces_predicted_objects(new_scan_id)"
+    "#acces_predicted_objects(new_scan_id)"
    ]
   },
   {
@@ -164,46 +136,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "colors dict {13: array([247, 182, 210], dtype=uint8), 20: array([ 66, 188, 102], dtype=uint8), 1: array([174, 199, 232], dtype=uint8), 4: array([255, 127,  14], dtype=uint8), 100: array([191,  63,  78], dtype=uint8), 6: array([ 44, 160,  44], dtype=uint8), 14: array([227, 119, 194], dtype=uint8), 15: array([219, 219, 141], dtype=uint8), 18: array([ 23, 190, 207], dtype=uint8), 29: array([153,  98, 156], dtype=uint8), 5: array([152, 223, 138], dtype=uint8), 8: array([214,  39,  40], dtype=uint8), 16: array([188, 189,  34], dtype=uint8), 105: array([153, 101, 134], dtype=uint8), 0: array([0, 0, 0], dtype=uint8)}\n",
-      "hey object added 0\n",
-      "object id 1\n",
-      "clour [0.77333333 0.88444444 1.03111111]\n",
-      "object id 4\n",
-      "clour [1.13333333 0.56444444 0.06222222]\n",
-      "object id 5\n",
-      "clour [0.67555556 0.99111111 0.61333333]\n",
-      "object id 6\n",
-      "clour [0.19555556 0.71111111 0.19555556]\n",
-      "object id 8\n",
-      "clour [0.95111111 0.17333333 0.17777778]\n",
-      "object id 105\n",
-      "clour [0.68       0.44888889 0.59555556]\n",
-      "object id 13\n",
-      "clour [1.09777778 0.80888889 0.93333333]\n",
-      "object id 14\n",
-      "clour [1.00888889 0.52888889 0.86222222]\n",
-      "object id 15\n",
-      "clour [0.97333333 0.97333333 0.62666667]\n",
-      "object id 16\n",
-      "clour [0.83555556 0.84       0.15111111]\n",
-      "object id 18\n",
-      "clour [0.10222222 0.84444444 0.92      ]\n",
-      "object id 20\n",
-      "clour [0.29333333 0.83555556 0.45333333]\n",
-      "object id 100\n",
-      "clour [0.84888889 0.28       0.34666667]\n",
-      "object id 29\n",
-      "clour [0.68       0.43555556 0.69333333]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create the newly predicted pointcloud\n",
     "all_centers = acces_predicted_objects( new_scan_id)\n",
@@ -213,11 +148,11 @@
     "\n",
     "#colour\n",
     "obj_colors = get_id_colours(data_dir, new_scan_id)\n",
-    "print(\"colors dict\", obj_colors)\n",
+    "#print(\"colors dict\", obj_colors)\n",
     "\n",
     "# Iterate over all objects in all_centers\n",
     "for obj_id, data in all_centers.items():\n",
-    "    print(\"hey object added\" , obj_id)\n",
+    "    #print(\"hey object added\" , obj_id)\n",
     "    points = data['points']  # Get points\n",
     "    color = np.array(obj_colors[obj_id], dtype=np.float32)\n",
     "    color = np.reshape(color, (3,))\n",
@@ -263,9 +198,9 @@
     "    # Iterate over all the points and their object IDs\n",
     "    for obj_id, points in zip(object_ids, pointclouds):\n",
     "        # Assign a default color (e.g., black) to these objects\n",
-    "        print(\"object id\", obj_id)\n",
+    "        #print(\"object id\", obj_id)\n",
     "        color = obj_colors[obj_id]/225.0\n",
-    "        print(\"clour\", obj_colors[obj_id]/225.0)\n",
+    "        #print(\"clour\", obj_colors[obj_id]/225.0)\n",
     "        # Create a point cloud for this object's points\n",
     "        pcd = o3d.geometry.PointCloud()\n",
     "        pcd.points = o3d.utility.Vector3dVector(points)\n",
@@ -277,15 +212,16 @@
     "colors = np.asarray(pkl_point_cloud.colors)\n",
     "\n",
     "# Scale the colors by the brightness factor\n",
-    "adjusted_colors = np.clip(colors *0.7, 0, 1)  # Clip to ensure values are in the [0, 1] range\n",
+    "#adjusted_colors = np.clip(colors *0.7, 0, 1)  # Clip to ensure values are in the [0, 1] range\n",
     "\n",
     "# Update the point cloud's colors\n",
-    "pkl_point_cloud.colors = o3d.utility.Vector3dVector(adjusted_colors)\n",
+    "# pkl_point_cloud.colors = o3d.utility.Vector3dVector(adjusted_colors)\n",
+    "pkl_point_cloud.colors = o3d.utility.Vector3dVector(colors)\n",
     "# Now combine both point clouds (final_point_cloud and pkl_point_cloud) for visualization\n",
     "combined_point_cloud = final_point_cloud + pkl_point_cloud\n",
     "\n",
     "# Visualize both together using Open3D\n",
-    "o3d.visualization.draw_geometries([pkl_point_cloud + final_point_cloud], window_name=\"Combined Point Clouds from Scan and PKL\")\n",
+    "o3d.visualization.draw_geometries([combined_point_cloud], window_name=\"Combined Point Clouds from Scan and PKL\")\n",
     "\n",
     "\n",
     "\n",
