--- a/matching/data_overview.ipynb
+++ b/matching/data_overview.ipynb
@@ -203,6 +203,158 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this codesegment accesses everything and creates the tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision AVG\n",
+      "K-Means           1         3         5         7         9\n",
+      "Threshold                                                  \n",
+      "-0.5       0.381445  0.382889  0.391981  0.394541  0.395878\n",
+      "-0.4       0.381445  0.382889  0.391981  0.394541  0.395878\n",
+      "-0.3       0.381445  0.382889  0.391981  0.394541  0.395878\n",
+      "-0.2       0.381445  0.382889  0.391981  0.394541  0.395878\n",
+      "-0.1       0.381445  0.382889  0.391981  0.394541  0.395878\n",
+      " 0.0       0.381445  0.382889  0.391981  0.394541  0.395878\n",
+      " 0.1       0.381445  0.382889  0.391981  0.394541  0.395878\n",
+      " 0.2       0.381445  0.382873  0.391954  0.394512  0.395830\n",
+      " 0.3       0.380709  0.381957  0.390702  0.392878  0.394064\n",
+      " 0.4       0.374690  0.374878  0.381765  0.382950  0.383202\n",
+      " 0.5       0.357851  0.355762  0.359361  0.358603  0.357532\n",
+      " 0.6       0.330259  0.324888  0.325400  0.322547  0.320005\n",
+      " 0.7       0.285998  0.275103  0.271659  0.265171  0.259902\n",
+      "\n",
+      "Recall AVG\n",
+      "K-Means           1         3         5         7         9\n",
+      "Threshold                                                  \n",
+      "-0.5       0.386269  0.386952  0.391875  0.392425  0.392112\n",
+      "-0.4       0.386269  0.386952  0.391875  0.392425  0.392112\n",
+      "-0.3       0.386269  0.386952  0.391875  0.392425  0.392112\n",
+      "-0.2       0.386269  0.386952  0.391875  0.392425  0.392112\n",
+      "-0.1       0.386269  0.386952  0.391875  0.392425  0.392112\n",
+      " 0.0       0.386269  0.386952  0.391875  0.392425  0.392112\n",
+      " 0.1       0.386269  0.386952  0.391875  0.392425  0.392112\n",
+      " 0.2       0.386269  0.386952  0.391875  0.392425  0.392113\n",
+      " 0.3       0.386294  0.386985  0.391911  0.392457  0.392156\n",
+      " 0.4       0.386696  0.387455  0.392421  0.393071  0.392837\n",
+      " 0.5       0.388072  0.387999  0.392285  0.392304  0.391538\n",
+      " 0.6       0.382483  0.379422  0.380402  0.378400  0.375871\n",
+      " 0.7       0.349256  0.338618  0.333360  0.327129  0.320914\n",
+      "\n",
+      "F1 AVG\n",
+      "K-Means           1         3         5         7         9\n",
+      "Threshold                                                  \n",
+      "-0.5       0.369318  0.370409  0.377335  0.379101  0.379681\n",
+      "-0.4       0.369318  0.370409  0.377335  0.379101  0.379681\n",
+      "-0.3       0.369318  0.370409  0.377335  0.379101  0.379681\n",
+      "-0.2       0.369318  0.370409  0.377335  0.379101  0.379681\n",
+      "-0.1       0.369318  0.370409  0.377335  0.379101  0.379681\n",
+      " 0.0       0.369318  0.370409  0.377335  0.379101  0.379681\n",
+      " 0.1       0.369318  0.370409  0.377335  0.379101  0.379681\n",
+      " 0.2       0.369318  0.370399  0.377320  0.379082  0.379653\n",
+      " 0.3       0.368921  0.369899  0.376610  0.378105  0.378640\n",
+      " 0.4       0.365503  0.365878  0.371497  0.372492  0.372468\n",
+      " 0.5       0.355729  0.354445  0.358028  0.357546  0.356599\n",
+      " 0.6       0.337377  0.332920  0.333400  0.330948  0.328525\n",
+      " 0.7       0.298317  0.287837  0.283681  0.277671  0.272264\n"
+     ]
+    }
+   ],
+   "source": [
+    "#look at the mask data\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os.path as osp\n",
+    "import os.path as osp\n",
+    "import sys\n",
+    "final_precision = []\n",
+    "final_recall = []\n",
+    "final_f1 = []\n",
+    "\n",
+    "# Access the contents\n",
+    "filepath = \"/media/ekoller/T7/Results/avg/statistics_segmentation0to60.pkl\"\n",
+    "with open(filepath, 'rb') as file:\n",
+    "    result = pickle.load(file)\n",
+    "\n",
+    "cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
+    "cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
+    "cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
+    "final_precision.extend(cosine_iou_metric_precision)\n",
+    "final_recall.extend(cosine_iou_metric_recall)\n",
+    "final_f1.extend(cosine_metric_f1)\n",
+    "\n",
+    "\n",
+    "filepath = \"/media/ekoller/T7/Results/avg/statistics_segmentation60to120.pkl\"\n",
+    "with open(filepath, 'rb') as file:\n",
+    "    result = pickle.load(file)\n",
+    "\n",
+    "cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
+    "cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
+    "cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
+    "final_precision.extend(cosine_iou_metric_precision)\n",
+    "final_recall.extend(cosine_iou_metric_recall)\n",
+    "final_f1.extend(cosine_metric_f1)\n",
+    "\n",
+    "filepath = \"/media/ekoller/T7/Results/avg/statistics_segmentation120to180.pkl\"\n",
+    "with open(filepath, 'rb') as file:\n",
+    "    result = pickle.load(file)\n",
+    "\n",
+    "cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
+    "cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
+    "cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
+    "final_precision.extend(cosine_iou_metric_precision)\n",
+    "final_recall.extend(cosine_iou_metric_recall)\n",
+    "final_f1.extend(cosine_metric_f1)\n",
+    "\n",
+    "# # Print to check the values\n",
+    "# print(\"Cosine IoU Metric Precision:\", np.mean(cosine_iou_metric_precision, axis=0))\n",
+    "# print(\"Cosine IoU Metric Recall:\", np.mean(cosine_iou_metric_recall, axis=0))\n",
+    "# print(\"Cosine Metric F1:\", np.mean(cosine_metric_f1, axis= 0))\n",
+    "\n",
+    "final_precision = np.mean(final_precision, axis=0)\n",
+    "final_recall = np.mean(final_recall, axis=0)\n",
+    "final_f1= np.mean(final_f1, axis= 0)\n",
+    "\n",
+    "k_means= [1,3,5,7,9]\n",
+    "threshold= [-0.5,-0.4,-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7]\n",
+    "\n",
+    "# Create a DataFrame for each metric\n",
+    "df_precision = pd.DataFrame(final_precision, index=threshold, columns=k_means)\n",
+    "df_recall = pd.DataFrame(final_recall, index=threshold, columns=k_means)\n",
+    "df_f1 = pd.DataFrame(final_f1, index=threshold, columns=k_means)\n",
+    "\n",
+    "# Set index and column labels for better readability\n",
+    "df_precision.index.name = 'Threshold'\n",
+    "df_precision.columns.name = 'K-Means'\n",
+    "\n",
+    "df_recall.index.name = 'Threshold'\n",
+    "df_recall.columns.name = 'K-Means'\n",
+    "\n",
+    "df_f1.index.name = 'Threshold'\n",
+    "df_f1.columns.name = 'K-Means'\n",
+    "\n",
+    "# Display the tables\n",
+    "print(\"Precision AVG\")\n",
+    "print(df_precision)\n",
+    "print(\"\\nRecall AVG\")\n",
+    "print(df_recall)\n",
+    "print(\"\\nF1 AVG\")\n",
+    "print(df_f1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
