added for true positives also the evaluation of the box iou

--- a/matching/data_overview.ipynb
+++ b/matching/data_overview.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -219,55 +219,55 @@
      "output_type": "stream",
      "text": [
       "Precision AVG\n",
-      "K-Means           1         3         5         7         9\n",
-      "Threshold                                                  \n",
-      "-0.5       0.381445  0.382889  0.391981  0.394541  0.395878\n",
-      "-0.4       0.381445  0.382889  0.391981  0.394541  0.395878\n",
-      "-0.3       0.381445  0.382889  0.391981  0.394541  0.395878\n",
-      "-0.2       0.381445  0.382889  0.391981  0.394541  0.395878\n",
-      "-0.1       0.381445  0.382889  0.391981  0.394541  0.395878\n",
-      " 0.0       0.381445  0.382889  0.391981  0.394541  0.395878\n",
-      " 0.1       0.381445  0.382889  0.391981  0.394541  0.395878\n",
-      " 0.2       0.381445  0.382873  0.391954  0.394512  0.395830\n",
-      " 0.3       0.380709  0.381957  0.390702  0.392878  0.394064\n",
-      " 0.4       0.374690  0.374878  0.381765  0.382950  0.383202\n",
-      " 0.5       0.357851  0.355762  0.359361  0.358603  0.357532\n",
-      " 0.6       0.330259  0.324888  0.325400  0.322547  0.320005\n",
-      " 0.7       0.285998  0.275103  0.271659  0.265171  0.259902\n",
+      "K-Means          1         3         5         7         9         11        13\n",
+      "Threshold                                                                      \n",
+      "-0.5       0.381485  0.382913  0.392015  0.394520  0.395893  0.397778  0.396775\n",
+      "-0.4       0.381485  0.382913  0.392015  0.394520  0.395893  0.397778  0.396775\n",
+      "-0.3       0.381485  0.382913  0.392015  0.394520  0.395893  0.397778  0.396775\n",
+      "-0.2       0.381485  0.382913  0.392015  0.394520  0.395893  0.397778  0.396775\n",
+      "-0.1       0.381485  0.382913  0.392015  0.394520  0.395893  0.397778  0.396775\n",
+      " 0.0       0.381485  0.382913  0.392015  0.394520  0.395893  0.397778  0.396775\n",
+      " 0.1       0.381485  0.382913  0.392015  0.394520  0.395893  0.397778  0.396775\n",
+      " 0.2       0.381485  0.382897  0.391987  0.394491  0.395845  0.397699  0.396674\n",
+      " 0.3       0.380764  0.381981  0.390734  0.392857  0.394079  0.395696  0.394452\n",
+      " 0.4       0.374759  0.374901  0.381786  0.382930  0.383217  0.383763  0.381543\n",
+      " 0.5       0.357904  0.355782  0.359389  0.358584  0.357531  0.354864  0.353066\n",
+      " 0.6       0.330311  0.324905  0.325426  0.322531  0.320000  0.316281  0.313882\n",
+      " 0.7       0.286038  0.275103  0.271673  0.265155  0.259890  0.253803  0.248319\n",
       "\n",
       "Recall AVG\n",
-      "K-Means           1         3         5         7         9\n",
-      "Threshold                                                  \n",
-      "-0.5       0.386269  0.386952  0.391875  0.392425  0.392112\n",
-      "-0.4       0.386269  0.386952  0.391875  0.392425  0.392112\n",
-      "-0.3       0.386269  0.386952  0.391875  0.392425  0.392112\n",
-      "-0.2       0.386269  0.386952  0.391875  0.392425  0.392112\n",
-      "-0.1       0.386269  0.386952  0.391875  0.392425  0.392112\n",
-      " 0.0       0.386269  0.386952  0.391875  0.392425  0.392112\n",
-      " 0.1       0.386269  0.386952  0.391875  0.392425  0.392112\n",
-      " 0.2       0.386269  0.386952  0.391875  0.392425  0.392113\n",
-      " 0.3       0.386294  0.386985  0.391911  0.392457  0.392156\n",
-      " 0.4       0.386696  0.387455  0.392421  0.393071  0.392837\n",
-      " 0.5       0.388072  0.387999  0.392285  0.392304  0.391538\n",
-      " 0.6       0.382483  0.379422  0.380402  0.378400  0.375871\n",
-      " 0.7       0.349256  0.338618  0.333360  0.327129  0.320914\n",
+      "K-Means          1         3         5         7         9         11        13\n",
+      "Threshold                                                                      \n",
+      "-0.5       0.386305  0.386965  0.391882  0.392387  0.392105  0.389664  0.387968\n",
+      "-0.4       0.386305  0.386965  0.391882  0.392387  0.392105  0.389664  0.387968\n",
+      "-0.3       0.386305  0.386965  0.391882  0.392387  0.392105  0.389664  0.387968\n",
+      "-0.2       0.386305  0.386965  0.391882  0.392387  0.392105  0.389664  0.387968\n",
+      "-0.1       0.386305  0.386965  0.391882  0.392387  0.392105  0.389664  0.387968\n",
+      " 0.0       0.386305  0.386965  0.391882  0.392387  0.392105  0.389664  0.387968\n",
+      " 0.1       0.386305  0.386965  0.391882  0.392387  0.392105  0.389664  0.387968\n",
+      " 0.2       0.386305  0.386964  0.391882  0.392388  0.392106  0.389660  0.387964\n",
+      " 0.3       0.386330  0.386998  0.391918  0.392419  0.392148  0.389728  0.388032\n",
+      " 0.4       0.386732  0.387468  0.392436  0.393033  0.392830  0.390399  0.388638\n",
+      " 0.5       0.388107  0.388012  0.392305  0.392266  0.391522  0.388850  0.386916\n",
+      " 0.6       0.382517  0.379435  0.380423  0.378363  0.375873  0.372011  0.369117\n",
+      " 0.7       0.349283  0.338621  0.333384  0.327095  0.320906  0.313260  0.306129\n",
       "\n",
       "F1 AVG\n",
-      "K-Means           1         3         5         7         9\n",
-      "Threshold                                                  \n",
-      "-0.5       0.369318  0.370409  0.377335  0.379101  0.379681\n",
-      "-0.4       0.369318  0.370409  0.377335  0.379101  0.379681\n",
-      "-0.3       0.369318  0.370409  0.377335  0.379101  0.379681\n",
-      "-0.2       0.369318  0.370409  0.377335  0.379101  0.379681\n",
-      "-0.1       0.369318  0.370409  0.377335  0.379101  0.379681\n",
-      " 0.0       0.369318  0.370409  0.377335  0.379101  0.379681\n",
-      " 0.1       0.369318  0.370409  0.377335  0.379101  0.379681\n",
-      " 0.2       0.369318  0.370399  0.377320  0.379082  0.379653\n",
-      " 0.3       0.368921  0.369899  0.376610  0.378105  0.378640\n",
-      " 0.4       0.365503  0.365878  0.371497  0.372492  0.372468\n",
-      " 0.5       0.355729  0.354445  0.358028  0.357546  0.356599\n",
-      " 0.6       0.337377  0.332920  0.333400  0.330948  0.328525\n",
-      " 0.7       0.298317  0.287837  0.283681  0.277671  0.272264\n"
+      "K-Means          1         3         5         7         9         11        13\n",
+      "Threshold                                                                      \n",
+      "-0.5       0.369345  0.370426  0.377355  0.379072  0.379688  0.379050  0.378006\n",
+      "-0.4       0.369345  0.370426  0.377355  0.379072  0.379688  0.379050  0.378006\n",
+      "-0.3       0.369345  0.370426  0.377355  0.379072  0.379688  0.379050  0.378006\n",
+      "-0.2       0.369345  0.370426  0.377355  0.379072  0.379688  0.379050  0.378006\n",
+      "-0.1       0.369345  0.370426  0.377355  0.379072  0.379688  0.379050  0.378006\n",
+      " 0.0       0.369345  0.370426  0.377355  0.379072  0.379688  0.379050  0.378006\n",
+      " 0.1       0.369345  0.370426  0.377355  0.379072  0.379688  0.379050  0.378006\n",
+      " 0.2       0.369345  0.370417  0.377340  0.379053  0.379660  0.379004  0.377947\n",
+      " 0.3       0.368958  0.369916  0.376630  0.378076  0.378648  0.377875  0.376743\n",
+      " 0.4       0.365552  0.365895  0.371515  0.372464  0.372475  0.371156  0.369442\n",
+      " 0.5       0.355777  0.354460  0.358052  0.357520  0.356593  0.353990  0.352089\n",
+      " 0.6       0.337428  0.332934  0.333423  0.330923  0.328522  0.324906  0.322328\n",
+      " 0.7       0.298359  0.287836  0.283700  0.277647  0.272250  0.265797  0.259858\n"
      ]
     }
    ],
@@ -284,7 +284,7 @@
     "final_f1 = []\n",
     "\n",
     "# Access the contents\n",
-    "filepath = \"/media/ekoller/T7/Results/avg/statistics_segmentation0to60.pkl\"\n",
+    "filepath = \"/media/ekoller/T7/Results/avg/statistics_segmentation_0to60.pkl\"\n",
     "with open(filepath, 'rb') as file:\n",
     "    result = pickle.load(file)\n",
     "\n",
@@ -296,7 +296,7 @@
     "final_f1.extend(cosine_metric_f1)\n",
     "\n",
     "\n",
-    "filepath = \"/media/ekoller/T7/Results/avg/statistics_segmentation60to120.pkl\"\n",
+    "filepath = \"/media/ekoller/T7/Results/avg/statistics_segmentation_60to120.pkl\"\n",
     "with open(filepath, 'rb') as file:\n",
     "    result = pickle.load(file)\n",
     "\n",
@@ -307,7 +307,7 @@
     "final_recall.extend(cosine_iou_metric_recall)\n",
     "final_f1.extend(cosine_metric_f1)\n",
     "\n",
-    "filepath = \"/media/ekoller/T7/Results/avg/statistics_segmentation120to180.pkl\"\n",
+    "filepath = \"/media/ekoller/T7/Results/avg/statistics_segmentation_120to180.pkl\"\n",
     "with open(filepath, 'rb') as file:\n",
     "    result = pickle.load(file)\n",
     "\n",
@@ -327,7 +327,7 @@
     "final_recall = np.mean(final_recall, axis=0)\n",
     "final_f1= np.mean(final_f1, axis= 0)\n",
     "\n",
-    "k_means= [1,3,5,7,9]\n",
+    "k_means= [1,3,5,7,9,11,13]\n",
     "threshold= [-0.5,-0.4,-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7]\n",
     "\n",
     "# Create a DataFrame for each metric\n",
@@ -344,6 +344,12 @@
     "\n",
     "df_f1.index.name = 'Threshold'\n",
     "df_f1.columns.name = 'K-Means'\n",
+    "\n",
+    "# Set Pandas options to display without wrapping\n",
+    "pd.set_option('display.max_columns', None)  # Ensure all columns are shown\n",
+    "pd.set_option('display.width', None)        # Make display width flexible\n",
+    "pd.set_option('display.expand_frame_repr', False)  # Prevent wrapping\n",
+    "\n",
     "\n",
     "# Display the tables\n",
     "print(\"Precision AVG\")\n",
