adjusted the visualization

--- a/matching/data_overview.ipynb
+++ b/matching/data_overview.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -221,53 +221,53 @@
       "Precision AVG\n",
       "K-Means          1         3         5         7         9         11        13\n",
       "Threshold                                                                      \n",
-      "-0.5       0.381485  0.382913  0.392015  0.394520  0.395893  0.397778  0.396775\n",
-      "-0.4       0.381485  0.382913  0.392015  0.394520  0.395893  0.397778  0.396775\n",
-      "-0.3       0.381485  0.382913  0.392015  0.394520  0.395893  0.397778  0.396775\n",
-      "-0.2       0.381485  0.382913  0.392015  0.394520  0.395893  0.397778  0.396775\n",
-      "-0.1       0.381485  0.382913  0.392015  0.394520  0.395893  0.397778  0.396775\n",
-      " 0.0       0.381485  0.382913  0.392015  0.394520  0.395893  0.397778  0.396775\n",
-      " 0.1       0.381485  0.382913  0.392015  0.394520  0.395893  0.397778  0.396775\n",
-      " 0.2       0.381485  0.382897  0.391987  0.394491  0.395845  0.397699  0.396674\n",
-      " 0.3       0.380764  0.381981  0.390734  0.392857  0.394079  0.395696  0.394452\n",
-      " 0.4       0.374759  0.374901  0.381786  0.382930  0.383217  0.383763  0.381543\n",
-      " 0.5       0.357904  0.355782  0.359389  0.358584  0.357531  0.354864  0.353066\n",
-      " 0.6       0.330311  0.324905  0.325426  0.322531  0.320000  0.316281  0.313882\n",
-      " 0.7       0.286038  0.275103  0.271673  0.265155  0.259890  0.253803  0.248319\n",
+      "-0.5       0.375483  0.378171  0.384955  0.386396  0.387890  0.387974  0.388824\n",
+      "-0.4       0.375483  0.378171  0.384955  0.386396  0.387890  0.387974  0.388824\n",
+      "-0.3       0.375483  0.378171  0.384955  0.386396  0.387890  0.387974  0.388824\n",
+      "-0.2       0.375483  0.378171  0.384955  0.386396  0.387890  0.387974  0.388824\n",
+      "-0.1       0.375483  0.378171  0.384955  0.386396  0.387890  0.387974  0.388824\n",
+      " 0.0       0.375483  0.378171  0.384955  0.386396  0.387890  0.387974  0.388824\n",
+      " 0.1       0.375483  0.378171  0.384955  0.386396  0.387890  0.387974  0.388824\n",
+      " 0.2       0.375483  0.378171  0.384942  0.386354  0.387848  0.387926  0.388753\n",
+      " 0.3       0.374687  0.377268  0.383516  0.384615  0.385941  0.385656  0.386306\n",
+      " 0.4       0.367638  0.368753  0.373170  0.373065  0.372765  0.371228  0.371184\n",
+      " 0.5       0.349868  0.348731  0.350019  0.348439  0.346878  0.344167  0.343002\n",
+      " 0.6       0.323061  0.318747  0.317530  0.313859  0.310242  0.305972  0.303455\n",
+      " 0.7       0.274906  0.264682  0.257780  0.250349  0.243554  0.236454  0.230334\n",
       "\n",
       "Recall AVG\n",
       "K-Means          1         3         5         7         9         11        13\n",
       "Threshold                                                                      \n",
-      "-0.5       0.386305  0.386965  0.391882  0.392387  0.392105  0.389664  0.387968\n",
-      "-0.4       0.386305  0.386965  0.391882  0.392387  0.392105  0.389664  0.387968\n",
-      "-0.3       0.386305  0.386965  0.391882  0.392387  0.392105  0.389664  0.387968\n",
-      "-0.2       0.386305  0.386965  0.391882  0.392387  0.392105  0.389664  0.387968\n",
-      "-0.1       0.386305  0.386965  0.391882  0.392387  0.392105  0.389664  0.387968\n",
-      " 0.0       0.386305  0.386965  0.391882  0.392387  0.392105  0.389664  0.387968\n",
-      " 0.1       0.386305  0.386965  0.391882  0.392387  0.392105  0.389664  0.387968\n",
-      " 0.2       0.386305  0.386964  0.391882  0.392388  0.392106  0.389660  0.387964\n",
-      " 0.3       0.386330  0.386998  0.391918  0.392419  0.392148  0.389728  0.388032\n",
-      " 0.4       0.386732  0.387468  0.392436  0.393033  0.392830  0.390399  0.388638\n",
-      " 0.5       0.388107  0.388012  0.392305  0.392266  0.391522  0.388850  0.386916\n",
-      " 0.6       0.382517  0.379435  0.380423  0.378363  0.375873  0.372011  0.369117\n",
-      " 0.7       0.349283  0.338621  0.333384  0.327095  0.320906  0.313260  0.306129\n",
+      "-0.5       0.382939  0.383454  0.387596  0.387014  0.386579  0.383350  0.382016\n",
+      "-0.4       0.382939  0.383454  0.387596  0.387014  0.386579  0.383350  0.382016\n",
+      "-0.3       0.382939  0.383454  0.387596  0.387014  0.386579  0.383350  0.382016\n",
+      "-0.2       0.382939  0.383454  0.387596  0.387014  0.386579  0.383350  0.382016\n",
+      "-0.1       0.382939  0.383454  0.387596  0.387014  0.386579  0.383350  0.382016\n",
+      " 0.0       0.382939  0.383454  0.387596  0.387014  0.386579  0.383350  0.382016\n",
+      " 0.1       0.382939  0.383454  0.387596  0.387014  0.386579  0.383350  0.382016\n",
+      " 0.2       0.382939  0.383454  0.387596  0.387014  0.386580  0.383351  0.382016\n",
+      " 0.3       0.382971  0.383488  0.387650  0.387093  0.386647  0.383413  0.382089\n",
+      " 0.4       0.384327  0.384914  0.389214  0.388653  0.388246  0.385057  0.383762\n",
+      " 0.5       0.385559  0.385316  0.388168  0.386831  0.385691  0.381709  0.380265\n",
+      " 0.6       0.379050  0.375044  0.374768  0.371318  0.367606  0.362428  0.359038\n",
+      " 0.7       0.334632  0.322524  0.314149  0.305388  0.296804  0.287440  0.279611\n",
       "\n",
       "F1 AVG\n",
       "K-Means          1         3         5         7         9         11        13\n",
       "Threshold                                                                      \n",
-      "-0.5       0.369345  0.370426  0.377355  0.379072  0.379688  0.379050  0.378006\n",
-      "-0.4       0.369345  0.370426  0.377355  0.379072  0.379688  0.379050  0.378006\n",
-      "-0.3       0.369345  0.370426  0.377355  0.379072  0.379688  0.379050  0.378006\n",
-      "-0.2       0.369345  0.370426  0.377355  0.379072  0.379688  0.379050  0.378006\n",
-      "-0.1       0.369345  0.370426  0.377355  0.379072  0.379688  0.379050  0.378006\n",
-      " 0.0       0.369345  0.370426  0.377355  0.379072  0.379688  0.379050  0.378006\n",
-      " 0.1       0.369345  0.370426  0.377355  0.379072  0.379688  0.379050  0.378006\n",
-      " 0.2       0.369345  0.370417  0.377340  0.379053  0.379660  0.379004  0.377947\n",
-      " 0.3       0.368958  0.369916  0.376630  0.378076  0.378648  0.377875  0.376743\n",
-      " 0.4       0.365552  0.365895  0.371515  0.372464  0.372475  0.371156  0.369442\n",
-      " 0.5       0.355777  0.354460  0.358052  0.357520  0.356593  0.353990  0.352089\n",
-      " 0.6       0.337428  0.332934  0.333423  0.330923  0.328522  0.324906  0.322328\n",
-      " 0.7       0.298359  0.287836  0.283700  0.277647  0.272250  0.265797  0.259858\n"
+      "-0.5       0.363260  0.364957  0.370687  0.371170  0.371908  0.370462  0.370326\n",
+      "-0.4       0.363260  0.364957  0.370687  0.371170  0.371908  0.370462  0.370326\n",
+      "-0.3       0.363260  0.364957  0.370687  0.371170  0.371908  0.370462  0.370326\n",
+      "-0.2       0.363260  0.364957  0.370687  0.371170  0.371908  0.370462  0.370326\n",
+      "-0.1       0.363260  0.364957  0.370687  0.371170  0.371908  0.370462  0.370326\n",
+      " 0.0       0.363260  0.364957  0.370687  0.371170  0.371908  0.370462  0.370326\n",
+      " 0.1       0.363260  0.364957  0.370687  0.371170  0.371908  0.370462  0.370326\n",
+      " 0.2       0.363260  0.364957  0.370682  0.371153  0.371890  0.370441  0.370293\n",
+      " 0.3       0.362814  0.364471  0.369866  0.370143  0.370778  0.369150  0.368903\n",
+      " 0.4       0.359053  0.359877  0.364201  0.363722  0.363381  0.361025  0.360443\n",
+      " 0.5       0.348456  0.347544  0.349373  0.347843  0.346441  0.343184  0.342049\n",
+      " 0.6       0.330312  0.326077  0.325335  0.321978  0.318478  0.314033  0.311226\n",
+      " 0.7       0.284197  0.273589  0.266647  0.259069  0.251812  0.244122  0.237852\n"
      ]
     }
    ],
@@ -284,30 +284,30 @@
     "final_f1 = []\n",
     "\n",
     "# Access the contents\n",
-    "filepath = \"/media/ekoller/T7/Results/avg/statistics_segmentation_0to60.pkl\"\n",
-    "with open(filepath, 'rb') as file:\n",
-    "    result = pickle.load(file)\n",
+    "# filepath = \"/media/ekoller/T7/Results/max/statistics_segmentation_0to60.pkl\"\n",
+    "# with open(filepath, 'rb') as file:\n",
+    "#     result = pickle.load(file)\n",
     "\n",
-    "cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
-    "cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
-    "cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
-    "final_precision.extend(cosine_iou_metric_precision)\n",
-    "final_recall.extend(cosine_iou_metric_recall)\n",
-    "final_f1.extend(cosine_metric_f1)\n",
+    "# cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
+    "# cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
+    "# cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
+    "# final_precision.extend(cosine_iou_metric_precision)\n",
+    "# final_recall.extend(cosine_iou_metric_recall)\n",
+    "# final_f1.extend(cosine_metric_f1)\n",
     "\n",
     "\n",
-    "filepath = \"/media/ekoller/T7/Results/avg/statistics_segmentation_60to120.pkl\"\n",
-    "with open(filepath, 'rb') as file:\n",
-    "    result = pickle.load(file)\n",
+    "# filepath = \"/media/ekoller/T7/Results/max/statistics_segmentation_60to120.pkl\"\n",
+    "# with open(filepath, 'rb') as file:\n",
+    "#     result = pickle.load(file)\n",
     "\n",
-    "cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
-    "cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
-    "cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
-    "final_precision.extend(cosine_iou_metric_precision)\n",
-    "final_recall.extend(cosine_iou_metric_recall)\n",
-    "final_f1.extend(cosine_metric_f1)\n",
+    "# cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
+    "# cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
+    "# cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
+    "# final_precision.extend(cosine_iou_metric_precision)\n",
+    "# final_recall.extend(cosine_iou_metric_recall)\n",
+    "# final_f1.extend(cosine_metric_f1)\n",
     "\n",
-    "filepath = \"/media/ekoller/T7/Results/avg/statistics_segmentation_120to180.pkl\"\n",
+    "filepath = \"/media/ekoller/T7/Results/median/statistics_segmentation_120to180.pkl\"\n",
     "with open(filepath, 'rb') as file:\n",
     "    result = pickle.load(file)\n",
     "\n",
