--- a/sceneGraph_update/visualization_pointclouds.ipynb
+++ b/sceneGraph_update/visualization_pointclouds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,8 +220,29 @@
     "# Now combine both point clouds (final_point_cloud and pkl_point_cloud) for visualization\n",
     "combined_point_cloud = final_point_cloud + pkl_point_cloud\n",
     "\n",
+    "\n",
+    "#also display the mesh such that it is easier to recognize what is new\n",
+    "pathToMesh = osp.join(data_dir,\"scenes\", new_scan_id, \"labels.instances.align.annotated.v2.ply\")\n",
+    "new_mesh = o3d.io.read_triangle_mesh(pathToMesh)\n",
+    "# Visualize the mesh\n",
+    "\n",
+    "#check if it has colours\n",
+    "if not new_mesh.has_vertex_colors():\n",
+    "    print(\"Mesh does not have vertex colors\")\n",
+    "    exit()\n",
+    "\n",
+    "#make sure the colours are a oke\n",
+    "colors = np.asarray(new_mesh.vertex_colors)\n",
+    "if np.max(colors) > 1.0:  # Assuming colors are in the range [0, 255]\n",
+    "        colors /= 255.0\n",
+    "\n",
+    "#bruh swap the channels bc the colours from gt didn't match like zurias hint -> open: wtf does that mean for the rest\n",
+    "colors = np.asarray(new_mesh.vertex_colors)\n",
+    "colors = colors[:, [2, 1, 0]]  # Swap red and blue channels\n",
+    "new_mesh.vertex_colors = o3d.utility.Vector3dVector(colors)\n",
+    "\n",
     "# Visualize both together using Open3D\n",
-    "o3d.visualization.draw_geometries([combined_point_cloud], window_name=\"Combined Point Clouds from Scan and PKL\")\n",
+    "o3d.visualization.draw_geometries([final_point_cloud, new_mesh], window_name=\"Combined Point Clouds from Scan and PKL\")\n",
     "\n",
     "\n",
     "\n",
